--- a/src/Assets/Styles/index.css
+++ b/src/Assets/Styles/index.css
@@ -1,9 +1,8 @@
-#root {
+html, body {
     margin: 0;
     padding: 0;
     border: none;
     height: 100%;
     width: 100%;
-    overflow: hidden;
     background-color: black;
 }
