New Commit oct19

--- a/src/Assets/Styles/MainFrame.css
+++ b/src/Assets/Styles/MainFrame.css
@@ -1,10 +1,13 @@
 .main-frame {
     color: white;
+    width: auto;
+    height: auto;
 }
 
 .main-frame .idk {
     justify-content: center;
-    display:flex;
+    display:flex; 
     text-align: center;
     color: black
+    
 }
