--- a/src/Assets/Styles/App.css
+++ b/src/Assets/Styles/App.css
@@ -1,16 +1,16 @@
-.PSDoodle{
+.PSDoodle {
     position: relative;
     padding-left: 50%;
     font-weight: bold;
     font-family: Helvetica;
     font-size: 20px;
 }
-.main-frame{
+.background {
     color:white;
 }
 
 
-.idk {
+.main-container {
     justify-content: center;
     display:flex;
     align-items: center;
