--- a/src/Assets/Styles/index.css
+++ b/src/Assets/Styles/index.css
@@ -4,9 +4,7 @@ html, body {
     border: none;
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: #242424;
     position: absolute;
     overflow: hidden;
-    left: 0%;
-    bottom: -10%
 }
