--- a/src/Assets/Styles/App.css
+++ b/src/Assets/Styles/App.css
@@ -22,10 +22,20 @@
 .left-container {
     display: flex;
     text-align: center;
-    margin-top: 15vh;
     margin-left: 12vh;
+    margin-right: 2vw;
+}
+
+.list-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .canvas-container {
-    margin-left: 4vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2vw;
 }
