--- a/src/Assets/Styles/App.css
+++ b/src/Assets/Styles/App.css
@@ -2,7 +2,7 @@
     position: absolute;
     font-weight: bold;
     font-family: Helvetica;
-    font-size: 40px;
+    font-size: 3vw;
     color: white;
     left: 8vh;
     top: 5vh;
@@ -11,10 +11,10 @@
     position: absolute;
     font-weight: bold;
     font-family: Helvetica;
-    font-size: 24px;
+    font-size: 1.5vw;
     color: white;
     left: 8vh;
-    top: 8vh;
+    top: 12vh;
 }
 .background {
     color:white;
